# load-balancer

./: .gitignore  Cargo.toml  README.md
backend/: Dockerfile  lb_test.py  start_container  start_server_8080.sh  start_server_8081.sh  start_server_8082.sh
load-balancer/: Cargo.toml  Dockerfile  Dockerfile.basic  Dockerfile.chef  config.toml  run.sh
load-balancer/src/: main.rs
test/: urls.txt
