[package]
name = "load-balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
tower = "0.4.13"
axum = "0.7.5"
tokio = { version = "1.38.1", features = ["full"] }
hyper = { version = "1.4.1", features = ["full"] }
axum-server = "0.7.1"
reqwest = "0.12.5"
hyper-util = "0.1.6"
clap = { version = "4.5.15", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
